fix text overflow

--- a/style.css
+++ b/style.css
@@ -55,7 +55,8 @@ main {
 
 .book-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-auto-rows: 220px;
     gap: 1rem;
     padding: 1rem;
 }
@@ -64,12 +65,21 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 100%;
     padding: 1rem;
     background-color: var(--primary-color);
     color: #f6f6f9;
     border: 1px solid #f6f6f9;
     border-radius: 0.5rem;
     gap: .25rem;
+    overflow: hidden;
+}
+
+.book-item h2,
+.book-item p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .btn-books {
@@ -121,8 +131,8 @@ main {
     background-color: var(--primary-color);
     border-radius: 0.5rem;
     font-size: 1rem;
-    width: 100%;
-    height: 100%;
+    width: clamp(300px, 100%, 100%);
+    height: clamp(200px, 100%, 100%);
     padding: 1rem;
     transition: background-color 0.3s ease;
 }
